# haskell-uno-binding

./: .gitignore  README.md
examples/: startlo.sh
examples/document_loader/: Main.hs  Setup.hs  Temp.hs  document-loader.cabal
examples/document_loader/tmp/Com/Sun/Star/: Beans.hs  Bridge.hs  Frame.hs  Lang.hs  Uno.hs
examples/macro_expander/: Main.hs  Setup.hs  macro-expander.cabal
examples/swriter/: Main.hs  Setup.hs  swriter.cabal
hs_uno/: README.md  Setup.hs  hs-uno.cabal
hs_uno/src/: UNO.hs
hs_uno/src/Com/Sun/Star/Uno/: XInterface.hs
hs_uno/src/UNO/: Any.hs  Binary.cxx  Binary.hs  Binary.hxx  Reference.hs  Service.hs  Singleton.hs  Text.cxx  Text.h  Text.hs  Types.cxx  Types.hs
hs_unoidl/: .gitignore  Makefile  README.md
hs_unoidl/src/: entity.cxx  entity.hxx  file.cxx  file.hxx  main.cpp  main.cxx  module.cxx  module.hxx  types.cxx  types.hxx  utils.cxx  utils.hxx  writer.cxx  writer.hxx
hs_unoidl/src/writer/: cxx.cxx  cxx.hxx  hs.cxx  hs.hxx  hxx.cxx  hxx.hxx  utils.cxx  utils.hxx  writer.hxx
