name:                hs-uno
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MPL-2.0
license-file:        LICENSE
author:              Jorge Mendes
maintainer:          jorgecunhamendes@gmail.com
-- copyright:           
-- category:            
build-type:          Custom
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     UNO
                     , UNO.Binary
                     , UNO.Text
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  c-sources:           src/UNO/Binary.cxx
                     , src/UNO/Text.cxx
