name:                document-loader
version:             0.1.0.0
synopsis:            Example of how to load a document using Haskell UNO.
description:         This is an example of the usage of the Haskell UNO
                     bindings.
license:             MPL-2.0
license-file:        LICENSE
author:              Jorge Mendes
maintainer:          jorgecunhamendes@gmail.com
-- copyright:           
-- category:            
build-type:          Custom
-- extra-source-files:  
cabal-version:       >=1.10
extra-tmp-files:     gen

executable document-loader
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings
  hs-source-dirs:      ., tmp
  build-depends:       base >=4.6
                     , text
                     , hs-uno
  -- hs-source-dirs:      
  default-language:    Haskell2010
  x-lo-sdk-types:
    com.sun.star.uno.XInterface
    com.sun.star.bridge.XUnoUrlResolver
    com.sun.star.bridge.UnoUrlResolver
    com.sun.star.beans.Property
    com.sun.star.beans.XPropertySet
    com.sun.star.beans.XPropertySetInfo


--    com.sun.star.frame.Desktop
--    com.sun.star.frame.XComponentLoader
--    com.sun.star.lang.XMultiComponentFactory
--    com.sun.star.registry.XSimpleRegistry
